--- a/src/main/resources/templates/missions/new-mission/create-new-mission.html
+++ b/src/main/resources/templates/missions/new-mission/create-new-mission.html
@@ -33,7 +33,7 @@
 
                         <div class="form-group">
                             <label for="requiredVolunteerNumber" class="col-form-label">Nombre de Bénévoles Requis:</label>
-                            <input th:field="*{requiredVolunteerNumber}" type="number" id="requiredVolunteerNumber" class="form-control" required="required">
+                            <input th:field="*{requiredVolunteerNumber}" type="number" id="requiredVolunteerNumber" class="form-control" required="required" min="0">
                         </div>
                     </form>
                 </div>
