--- a/src/main/resources/templates/missions/planned-mission/create-planned-mission.html
+++ b/src/main/resources/templates/missions/planned-mission/create-planned-mission.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css">
-
-</head>
+<div th:replace="~{fragments/head :: head}"></div>
 <body>
 <div class="container">
     <div class="row">
         <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
-                <h1>Mise à jour</h1>
+                <h1>Planification</h1>
             </div>
             <div class="card-body">
-                <p>Description : <span th:text="${mission.title}"></span></p>
-                <p th:text="${mission.missionType.name}"></p>
+                <p>Titre : <span th:text="${mission.title}"></span></p>
+                <p>Statut : <span th:text="${@translationUtils.translateMissionStatus(mission.status)}"></span></p>
+                <p>Type de mission : <span th:text="${mission.missionType.name}"></span></p>
                 <p>Description : <span th:text="${mission.description}"></span></p>
-                <p th:text="${mission.comment}"></p>
-                <p th:text="${@translationUtils.translateMissionStatus(mission.status)}"></p>
+                <p>Commentaire : <span th:text="${mission.comment}"></span></p>
+                <p>Nombre de bénévoles requis : <span th:text="${mission.requiredVolunteerNumber}"></span></p>
+
                 <form th:action="@{/missions/plan/{id}(id=${mission.uuid})}" method="post" id="planMissionForm" th:object="${mission}">
 
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
