--- a/src/main/resources/templates/fragments/modals/cancel-mission-modal.html
+++ b/src/main/resources/templates/fragments/modals/cancel-mission-modal.html
@@ -2,49 +2,50 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <div th:replace="~{fragments/head :: head}"></div>
 <body>
-  <div th:fragment="cancel-mission-modal">
-    <script th:inline="javascript">
-      document.addEventListener('DOMContentLoaded', function() {
-        let deleteModal = document.getElementById('cancelMissionModal');
-        deleteModal.addEventListener('show.bs.modal', function(event) {
-          const button = event.relatedTarget;
-          const itemId = button.getAttribute('data-mission-id');
-          const deleteUrl = /*[[@{/missions/cancel/}]]*/ 'deletePath';
+<div th:fragment="cancel-mission-modal">
+  <script th:inline="javascript">
+    document.addEventListener('DOMContentLoaded', function() {
+      let cancelModal = document.getElementById('cancelMissionModal');
+      cancelModal.addEventListener('show.bs.modal', function(event) {
+        const button = event.relatedTarget;
+        const itemId = button.getAttribute('data-mission-id');
+        const cancelUrl = /*[[@{/missions/cancel/}]]*/ 'cancelPath';
 
-          let confirmDeleteBtn = document.getElementById('confirmCancel');
-          confirmDeleteBtn.onclick = function() {
-            window.location.href = deleteUrl + itemId;
-          };
-        });
+        let confirmCancelBtn = document.getElementById('confirmCancel');
+        confirmCancelBtn.onclick = function() {
+          window.location.href = cancelUrl + itemId;
+        };
       });
-    </script>
+    });
+  </script>
 
-    <div class="modal fade" id="cancelMissionModal" tabindex="-1" aria-labelledby="cancelMissionModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="cancelMissionModalLabel">Supprimer Type de Mission</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="modal fade" id="cancelMissionModal" tabindex="-1" aria-labelledby="cancelMissionModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="cancelMissionModalLabel">Annuler la Mission</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <span>Êtes-vous sûr de vouloir annuler la mission ?</span>
           </div>
-          <div class="modal-body">
-            <i class="bi bi-exclamation-triangle-fill">
-                        <span>
-                            Êtes-vous sûr de vouloir annuler la mission ?
-                        </span>
-            </i>
+          <div>
+            <span>Si ce n'est pas le cas, cliquez sur le bouton <strong>Revenir</strong>.</span>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-            <a class="btn btn-danger" id="confirmCancel">Confirmer</a>
-          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Revenir</button>
+          <a class="btn btn-danger" id="confirmCancel">Confirmer</a>
         </div>
       </div>
     </div>
-
-
   </div>
 
+</div>
 
-  <div th:replace="~{fragments/scripts :: scripts}"></div>
+
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
