--- a/src/main/resources/templates/fragments/modals/delete-mission-modal.html
+++ b/src/main/resources/templates/fragments/modals/delete-mission-modal.html
@@ -28,11 +28,13 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <i class="bi bi-exclamation-triangle-fill">
-                        <span>
-                            Êtes-vous sûr de vouloir supprimer la mission ?
-                        </span>
-          </i>
+          <div class="mb-3">
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <span>Êtes-vous sûr de vouloir supprimer la mission ?</span>
+          </div>
+          <div>
+            <span>Si ce n'est pas le cas, cliquez sur le bouton <strong>Annuler</strong>.</span>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
