--- a/src/main/resources/templates/missions/missions.html
+++ b/src/main/resources/templates/missions/missions.html
@@ -38,7 +38,8 @@
     <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
     <div th:replace="~{fragments/modals/delete-mission-modal :: delete-mission-modal}"></div>
     <div th:replace="~{fragments/modals/cancel-mission-modal :: cancel-mission-modal}"></div>
-
+    <div th:replace="~{fragments/modals/launch-mission-modal :: launch-mission-modal}"></div>
+    <div th:replace="~{fragments/modals/end-mission-modal :: end-mission-modal}"></div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 
 </body>
