--- a/src/main/resources/templates/fragments/modals/message-modal.html
+++ b/src/main/resources/templates/fragments/modals/message-modal.html
@@ -15,13 +15,13 @@
       console.log("Succès: " + hasSuccessMessage);
       console.log("Information: " + hasInformationMessage);
 
-      if (hasErrorMessage || hasSuccessMessage) {
+      if (hasErrorMessage || hasSuccessMessage || hasInformationMessage) {
         let messageModal = new bootstrap.Modal(document.getElementById('messageModal'));
         messageModal.show();
 
         setTimeout(function() {
           messageModal.hide();
-        }, 1500);
+        }, 2000);
       }
     });
   </script>
