--- a/src/main/resources/templates/missions/confirmed-mission/create-confirmed-mission.html
+++ b/src/main/resources/templates/missions/confirmed-mission/create-confirmed-mission.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<div th:replace="~{fragments/head :: head}"></div>
 <body>
 <div class="container">
     <div class="row">
@@ -33,13 +32,16 @@
                                         <div class="d-flex flex-column">
                                             <div class="d-flex justify-content-between">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" th:value="${volunteer.uuid}" th:name="volunteerUuids" th:id="${'volunteer' + volunteerStat.index}" required="required">
+                                                    <input class="form-check-input" type="checkbox" th:value="${volunteer.uuid}" th:name="volunteerUuids" th:id="${'volunteer' + volunteerStat.index}"
+                                                           required="required"
+                                                           th:checked="${#lists.contains(assignedVolunteerUuids, volunteer.uuid)}">
                                                     <label class="form-check-label" th:for="${'volunteer' + volunteerStat.index}">
                                                         <strong th:text="${volunteer.lastName.toUpperCase()} + ' ' + ${volunteer.firstName}"></strong>
                                                     </label>
                                                 </div>
                                                 <div>
-                                                    <input type="radio" autocomplete="off" class="btn-check" th:name="chiefUuid" th:value="${volunteer.uuid}" th:id="${'chief' + volunteerStat.index}">
+                                                    <input type="radio" autocomplete="off" class="btn-check" th:name="chiefUuid" th:value="${volunteer.uuid}" th:id="${'chief' + volunteerStat.index}"
+                                                           th:checked="${volunteer.uuid.equals(chiefUuid)}">
                                                     <label class="btn btn-outline-secondary" th:for="${'chief' + volunteerStat.index}">Chef de mission</label>
                                                 </div>
                                             </div>
@@ -62,9 +64,35 @@
         </div>
     </div>
 </div>
+<script>
+    document.querySelectorAll('[name="chiefUuid"]').forEach(radio => {
+        radio.addEventListener('click', (e) => {
+            if (e.target.dataset.checked === 'true') {
+                e.target.checked = false;
+                e.target.dataset.checked = 'false';
+            } else {
+                e.target.dataset.checked = 'true';
+            }
+        });
+    });
+    document.getElementById('confirmMissionForm').addEventListener('submit', function(e) {
+        let checkboxes = document.querySelectorAll('#confirmMissionForm input[type="checkbox"][name="volunteerUuids"]');
+        if (checkboxes.length === 0) {
+            alert("Il n'y a aucun volontaire à sélectionner.");
+            e.preventDefault(); // Empêcher la soumission du formulaire
+        } else {
+            let checkedOne = Array.prototype.slice.call(checkboxes).some(x => x.checked);
+            if (!checkedOne) {
+                alert("Veuillez sélectionner au moins un volontaire.");
+                e.preventDefault(); // Empêcher la soumission du formulaire
+            }
+        }
+    });
+</script>
 
 
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 
 </body>
+<div th:replace="~{fragments/head :: head}"></div>
 </html>
