--- a/src/main/resources/templates/missions/view-mission.html
+++ b/src/main/resources/templates/missions/view-mission.html
@@ -20,6 +20,8 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
+                                    <h3>Informations</h3>
+                                    <hr>
                                     <p>Description : <span th:text="${mission.missionDTO.description}"></span></p>
                                     <p>Commentaire : <span th:text="${mission.missionDTO.comment}"></span></p>
                                     <p>Statut : <span th:text="${@translationUtils.translateMissionStatus(mission.missionDTO.status)}"></span></p>
@@ -29,6 +31,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h3>Volontaires Assignés</h3>
+                                    <hr>
                                     <ul class="list-group">
                                         <li th:each="volunteer : ${mission.assignedVolunteers}" class="list-group-item">
                                             <div class="ms-2 me-auto">
