--- a/src/main/resources/templates/fragments/missions/completed-missions.html
+++ b/src/main/resources/templates/fragments/missions/completed-missions.html
@@ -40,6 +40,10 @@
                         <td th:text="${#temporals.format(completedMission.startDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td th:text="${#temporals.format(completedMission.endDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td>
+                            <!-- Rapport -->
+                            <a th:if="${!completedMission.reportDone}" class="btn btn-warning btn-sm" th:href="@{/missions/report/{id}(id=${completedMission.uuid})}">
+                                <i class="bi bi-flag me-1"></i><span>Rapport</span>
+                            </a>
                             <!-- Voir -->
                             <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${completedMission.uuid})}"><i class="bi bi-eye"></i></a>
                         </td>
